# pluto-duck-oss

./: .gitignore  README.md  pluto-duck-backend.spec  pyproject.toml
backend/: run_backend.py
backend/pluto_duck_backend/: __init__.py
backend/pluto_duck_backend/agent/: __init__.py
backend/pluto_duck_backend/agent/core/: __init__.py  events.py  graph.py  orchestrator.py  state.py
backend/pluto_duck_backend/agent/core/llm/: providers.py
backend/pluto_duck_backend/agent/core/nodes/: __init__.py  finalize.py  planner.py  reasoning.py  schema.py  sql.py  verifier.py
backend/pluto_duck_backend/agent/core/prompts/: __init__.py  master_prompt.txt  planner_prompt.txt  schema_prompt.txt  sql_prompt.txt
backend/pluto_duck_backend/app/: __init__.py  main.py
backend/pluto_duck_backend/app/api/: __init__.py  router.py
backend/pluto_duck_backend/app/api/v1/: __init__.py
backend/pluto_duck_backend/app/core/: __init__.py  config.py
backend/pluto_duck_backend/app/services/: __init__.py
backend/pluto_duck_backend/app/services/actions/: __init__.py  catalog.py
backend/pluto_duck_backend/app/services/chat/: __init__.py  repository.py
backend/pluto_duck_backend/app/services/data_sources/: __init__.py  repository.py
backend/pluto_duck_backend/app/services/execution/: __init__.py  manager.py  service.py
backend/pluto_duck_backend/app/services/ingestion/: __init__.py  base.py  duckdb_loader.py  registry.py  service.py
backend/pluto_duck_backend/app/services/transformation/: __init__.py  service.py
backend/pluto_duck_backend/templates/dbt/: dbt_project.yml
backend/tests/: test_config.py
backend/tests/agent/: test_agent_graph.py  test_reasoning.py
backend/tests/api/: test_actions_api.py  test_agent_api.py  test_chat_api.py  test_dbt_api.py  test_health_api.py  test_ingest_api.py  test_query_api.py
backend/tests/services/: test_actions.py  test_execution.py  test_ingestion.py  test_transformation.py
dbt_projects/core/: profiles.yml
dbt_projects/core/models/: sources.yml
docs/: AGENT_CLI_GUIDE.md  ARCHITECTURE.md  CONTRIBUTING.md
docs/plans/: agent-architecture-plan.md  backend-spec.plan.md  data-sources-ui-plan.md  frontend-phase2-chat-schema.md  frontend-phase2-plan.md  implementation-plan.md  pluto-duck-re-architecture-plan-9662a618.plan.md  settings-ui-plan.md  tauri-macos-packaging-plan.md
frontend/pluto_duck_frontend/: .env.local.example  .gitignore  README.md  components.json  next.config.js  package.json  pnpm-lock.yaml  tailwind.config.js  tsconfig.json
frontend/pluto_duck_frontend/app/: globals.css  layout.tsx  page.tsx
frontend/pluto_duck_frontend/app/workspace/: layout.tsx  page.tsx
frontend/pluto_duck_frontend/components/ai-elements/: index.ts  reasoning.tsx  sources.tsx
frontend/pluto_duck_frontend/components/chat/: Composer.tsx  ConversationList.tsx  SettingsModal.tsx  Transcript.tsx  index.ts
frontend/pluto_duck_frontend/components/data-sources/: ConnectorGrid.tsx  DataSourcesView.tsx  ImportCSVModal.tsx  ImportParquetModal.tsx  ImportPostgresModal.tsx  ImportSQLiteModal.tsx  SourceCard.tsx  index.ts
frontend/pluto_duck_frontend/components/ui/: input-group.tsx
frontend/pluto_duck_frontend/hooks/: useAgentStream.ts  useBackendStatus.ts
frontend/pluto_duck_frontend/lib/: api.ts  chatApi.ts  dataSourcesApi.ts  settingsApi.ts
frontend/pluto_duck_frontend/types/: agent.ts
frontend/pluto_duck_frontend/utils/: prompt.ts
plans/: backend-spec.plan.md  frontend-phase-2-plan.md  implementation-plan.md  pluto-duck-re-architecture-plan-9662a618.plan.md
scripts/: build-backend.sh  build.sh  dev-tauri.sh  dev.sh
(+23 files in other folders)
